--- a/style.css
+++ b/style.css
@@ -10,6 +10,25 @@ body{
     background-attachment: fixed;
     background-position: center;
 }
+#download{
+    text-align: center;
+    background-color: #f1f4ef; /* Green */
+    border: 2px solid #101010;
+    border-radius: 10px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    
+}
+#download:hover {
+    background-color: #f50f3d; /* Green */
+    color: white;
+  }
 /* nav dropdown-list */
 .no-list-style{
     list-style: none;
