--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     background-attachment: fixed;
     background-position: center;
 }
-#download{
+.download{
     text-align:center;
     background-color: #f1f4ef; /* Green */
     border: 2px solid #101010;
@@ -25,7 +25,7 @@ body{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     
 }
-#download:hover {
+.download:hover {
     background-color: #f50f3d; /* Green */
     color: white;
   }
